COMMERCE-1641 Fix clickable portlet controls if visible

--- a/commerce-theme-speedwell/commerce-theme-speedwell/src/css/components/_speedwell-topbar.scss
+++ b/commerce-theme-speedwell/commerce-theme-speedwell/src/css/components/_speedwell-topbar.scss
@@ -95,7 +95,8 @@
 
   &__logo {
     justify-content: center;
-    text-align: center
+    text-align: center;
+    overflow: hidden;
   }
 
   &__actions {
